# Resume-score-Checker

./: .gitignore  app.py  pyproject.toml
static/: style.css
templates/: index.html
